--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "home/config/nvim"]
-	path = home/config/nvim
+[submodule "home/configs/nvim"]
+	path = home/configs/nvim
 	url = https://github.com/matheustavarestrindade/neovim
